# awsm

./: .gitignore  AUTHORS.rst  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: unittest.yml
awsm/: __init__.py  cli.py
awsm/data/: init_model.py
awsm/framework/: CoreConfig.ini  ascii_art.py  framework.py
awsm/interface/: ingest_data.py  ipysnobal.py  pysnobal_io.py  smrf_connector.py
awsm/tests/: awsm_test_case.py  awsm_test_case_lakes.py  test_awsm_lakes.py  test_awsm_lakes_init.py  test_awsm_lakes_lidar_update.py  test_awsm_rme.py  test_cli.py
awsm/tests/basins/Lakes/: config.ini
awsm/tests/basins/Lakes/gold_hrrr/: em.nc  gold_config.ini  snow.nc
awsm/tests/basins/Lakes/gold_hrrr_update/: em.nc  gold_config.ini  model_lidar_change.nc  snow.nc
awsm/tests/basins/Lakes/topo/: snow.nc
awsm/tests/basins/RME/: config.ini
awsm/tests/basins/RME/gold/: em.nc  gold_config.ini  snow.nc
awsm/tests/basins/RME/topo/: topo.nc
awsm/tests/framework/: test_ipysnobal.py
scripts/: awsm  awsm_daily_airflow
